--- a/nginx/payment_service.conf
+++ b/nginx/payment_service.conf
@@ -30,7 +30,7 @@ server {
     error_log /app/www/payment_service/logs/blog_ssl_error.log error;
 
     location / {
-        proxy_pass http://blog:8000;
+        proxy_pass http://payment_service:8000;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
