--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -44,7 +44,7 @@ services:
     volumes:
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
-    command: certonly --webroot --webroot-path=/var/www/certbot --email ${ADMIN_EMAIL} --agree-tos --no-eff-email -d kirillblog.ru --non-interactive --keep-until-expiring
+    command: certonly --webroot --webroot-path=/var/www/certbot --email ${ADMIN_EMAIL} --agree-tos --no-eff-email -d kirillblog.ru -d www.kirillblog.ru --non-interactive --keep-until-expiring
     depends_on:
       - nginx
 
