--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,6 +31,14 @@ server {
     }
 
     location /favicon.ico { access_log off; log_not_found off; }
-    location /static/ { root /app/www/payment_service; }
-    location /media/ { root /app/www/payment_service; }
+    location /static/ {
+        alias /app/www/payment_service/staticfiles/;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+    location /media/ {
+        alias /app/www/payment_service/media/;
+        expires 30d;
+        add_header Cache-Control "public";
+    }
 }
